--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-material-ui-carousel": "^3.4.2",
+    "react-router-dom": "^6.11.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
