--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,15 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.1.1"
+    "mongoose": "^7.1.1",
+    "uuidv1": "^1.6.14"
   }
 }
