--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 8080
 MONGO_URI = mongodb+srv://mountdata:Mysatna4321@cluster0.2sdzro9.mongodb.net/StudentCRUD?retryWrites=true&w=majority
-JWT_SECRET = TANABANA
+JWT_SECRET = 'MYNAMEISUTKARSHKUSHWAHASATNAMPNB'
